@@ -28,12 +28,15 @@ title: Changelog
 
 icon:check[] Java Rest Client: The OkHttp implementation has replaced the Vert.x implementation. Some changes to the client interface were necessary to make the client independent of Vert.x. See link:https://getmesh.io/docs/platforms/#_java[this example] and the Javadoc for more information.
 
+icon:check[] Core: Fixed a bug that caused too long responses on binary range requests.
+
 [[v0.29.5]]
 == 0.29.5 (31.01.2019)
 
 icon:check[] Clustering: Creation of edges which lead to higher contention in the graph have been removed from job's. Job's will currently no longer reference the creator.
 
 icon:check[] Search: An error which was thrown by outdated branch schema assignments has been suppressed. A warning will be logged instead.
+
 
 [[v0.29.4]]
 == 0.29.4 (28.01.2019)
